# CRNN-Phoneme-Recognizer

./: .gitignore  LICENSE  README.md  infer.py  preprocess.py  pyproject.toml  sweep.py  timit3.phoneset  timit39.phoneset  timit5.phoneset  timit61.phoneset  train.py
configs/: config.yaml  paths.yaml
configs/models/: CRNN.yaml
configs/sweeps/: sweep_crnn.yaml
phonerec/: __init__.py
phonerec/datasets/: __init__.py  phoneme_frame.py
phonerec/models/: __init__.py  crnn.py  feature.py
phonerec/utils/: __init__.py  earlystop.py  evaluation.py  load_save.py
