[tool.poetry]
name = "Phonerec"
version = "0.1.0"
description = ""
authors = ["Sangeon Yong <koragon2@kaist.ac.kr>"]

[tool.poetry.dependencies]
python = "^3.8"
librosa = "^0.9.1"
SoundFile = "^0.10.3"
nnAudio = "0.2.6"
mido = "^1.2.10"
wandb = "^0.12.10"
mir_eval = "^0.7"
matplotlib = "^3.5.1"
tqdm = "^4.62.3"
numpy = "^1.22.2"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
